==> MyLittlePony93/Test/Src/NRF24l01.c <==
#include "NRF24l01.h"
#include "stm32f1xx_hal.h"
#include <stdio.h>
#include <string.h>
#define NRF24L01_REG_CONFIG				0x00	//Configuration Register
#define NRF24L01_REG_EN_AA				0x01	//Enable ‘Auto Acknowledgment’ Function
#define NRF24L01_REG_EN_RXADDR		0x02	//Enabled RX Addresses
#define NRF24L01_REG_SETUP_AW			0x03	//Setup of Address Widths (common for all data pipes)
#define NRF24L01_REG_SETUP_RETR		0x04	//Setup of Automatic Retransmission
#define NRF24L01_REG_RF_CH				0x05	//RF Channel
#define NRF24L01_REG_RF_SETUP			0x06	//RF Setup Register
#define NRF24L01_REG_STATUS				0x07	//Status Register
#define NRF24L01_REG_OBSERVE_TX		0x08	//Transmit observe register
#define NRF24L01_REG_RPD					0x09
#define NRF24L01_REG_RX_ADDR_P0		0x0A	//Receive address data pipe 0. 5 Bytes maximum length.
#define NRF24L01_REG_RX_ADDR_P1		0x0B	//Receive address data pipe 1. 5 Bytes maximum length.
#define NRF24L01_REG_RX_ADDR_P2		0x0C	//Receive address data pipe 2. Only LSB
#define NRF24L01_REG_RX_ADDR_P3		0x0D	//Receive address data pipe 3. Only LSB
#define NRF24L01_REG_RX_ADDR_P4		0x0E	//Receive address data pipe 4. Only LSB
#define NRF24L01_REG_RX_ADDR_P5		0x0F	//Receive address data pipe 5. Only LSB
#define NRF24L01_REG_TX_ADDR			0x10	//Transmit address. Used for a PTX device only
#define NRF24L01_REG_RX_PW_P0			0x11
#define NRF24L01_REG_RX_PW_P1			0x12
#define NRF24L01_REG_RX_PW_P2			0x13
#define NRF24L01_REG_RX_PW_P3			0x14
#define NRF24L01_REG_RX_PW_P4			0x15

void NRF24L01_CE_LOW()
{
	HAL_GPIO_WritePin( NRF24L01_Pins.CE.GPIOx, NRF24L01_Pins.CE.GPIO_Pin, GPIO_PIN_RESET );
}

void NRF24L01_CE_HIGH(void)
{
	HAL_GPIO_WritePin( NRF24L01_Pins.CE.GPIOx, NRF24L01_Pins.CE.GPIO_Pin, GPIO_PIN_SET );
}

void NRF24L01_CSN_LOW(void)
{
	HAL_GPIO_WritePin( NRF24L01_Pins.CSN.GPIOx, NRF24L01_Pins.CSN.GPIO_Pin, GPIO_PIN_RESET );	
}

void NRF24L01_CSN_HIGH(void)
{
	HAL_GPIO_WritePin( NRF24L01_Pins.CSN.GPIOx, NRF24L01_Pins.CSN.GPIO_Pin, GPIO_PIN_SET );	
}

uint8_t NRF24L01_Init(uint8_t channel, uint8_t payload_size, SPI_HandleTypeDef *hspi, NRF24L01_Pins_t pins )
{			
	NRF24L01_Pins = pins;
	
	for( int ind = 0 ; ind < 5 ; ind++ )
		pipe0_reading_address[ind] = 0;
	
	// Initialize SPI 
//	NRF24L01_SpiInit( hspi, NRF24L01_Pins );
	
	// We can consider the worst settle time and use to all
	HAL_Delay(5);
	
	/* Max payload is 32bytes */
	if (payload_size > 32){
		payload_size = 32;
	}
	
	/* Fill structure */
	NRF24L01_Struct.Channel = !channel; /* Set channel to some different value for TM_NRF24L01_SetChannel() function */
	NRF24L01_Struct.PayloadSize = payload_size;
	NRF24L01_Struct.OutPwr = NRF24L01_OutputPower_0dBm;
	NRF24L01_Struct.DataRate = NRF24L01_DataRate_1M;
	NRF24L01_Struct.hspi = hspi;
	
	/* Reset nRF24L01+ to power on registers values */
	NRF24L01_SoftwareReset();
	
	/* Set 1500uS timeouts ( minimum for 32 bytes payload in 250KBPS ) */
	NRF24L01_WriteRegister( NRF24L01_REG_SETUP_RETR, ((4 << NRF24L01_ARD)|(15 << NRF24L01_ARC)) );
	
	/* Channel select */
	NRF24L01_SetChannel(channel);
	
	/* Set pipeline to the payload size */
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P0, NRF24L01_Struct.PayloadSize); 
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P1, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P2, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P3, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P4, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P5, NRF24L01_Struct.PayloadSize);
	
	/* Set RF settings (1mbps, output power) */
	NRF24L01_SetRF( NRF24L01_Struct.DataRate, NRF24L01_Struct.OutPwr);
	
	/* Config register */
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG);
	
	/* Enable auto-acknowledgment for all pipes */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_AA, 0x3F);
	
	/* Enable RX addresses */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_RXADDR, 0x3F);

	/* Auto retransmit delay: 1000 (4x250) us and Up to 15 retransmit trials */
	NRF24L01_WriteRegister(NRF24L01_REG_SETUP_RETR, 0x4F);
	
	/* Dynamic length configurations: No dynamic length */
	NRF24L01_WriteRegister(NRF24L01_REG_DYNPD, (0 << NRF24L01_DPL_P0) | (0 << NRF24L01_DPL_P1) | (0 << NRF24L01_DPL_P2) | (0 << NRF24L01_DPL_P3) | (0 << NRF24L01_DPL_P4) | (0 << NRF24L01_DPL_P5));
	
	/* Initialize CRC 2bytes */
	NRF24L01_SetCrcLength( NRF24L01_CRC_16 );
	
	/* Clear FIFOs */
	NRF24L01_FlushTx();
	NRF24L01_FlushRx();
	
	/* Clear interrupts */
	NRF24L01_ClearInterrupts();
	
	/* Go to RX mode */
	NRF24L01_PowerUpRx();
	
	/* Return OK */
	return 1;
}

uint8_t NRF24L01_ReadRegister(uint8_t reg) 																															
{	
	/* NRF24L01 shifts the value of status register at the first MOSI byte and at the second 
	byte the value of the interested register */
	
	// Initialize buffers
	uint8_t txBuffer[2];
	txBuffer[0] = NRF24L01_CMD_R_REGISTER | reg;					// REGISTER | READ_MASK(000A AAAA)
	txBuffer[1] = NRF24L01_CMD_NOP;												// REVER -  problema se não inicializar?
	
	uint8_t rxBuffer[2] = { 0x00, 0x00 };
	
	NRF24L01_CSN_LOW();
	
	// Transmit the txBuffer and receive data on rxBuffer at the time
	HAL_SPI_TransmitReceive( NRF24L01_Struct.hspi, txBuffer, rxBuffer, 2, NRF24L01_SPI_TIMEOUT );
	
	NRF24L01_CSN_HIGH();
	
	return rxBuffer[1];
}

void NRF24L01_WriteRegister( uint8_t reg, uint8_t value ) 																					
{
	uint8_t txBuffer[ 2 ];
	txBuffer[0] = NRF24L01_CMD_W_REGISTER | reg;					// REGISTER | WRITE_MASK(001A AAAA)
	txBuffer[1] = value;																	// DATA to write
		
	NRF24L01_CSN_LOW();
	
	// Just transmit
	HAL_SPI_Transmit( NRF24L01_Struct.hspi, txBuffer, 2, NRF24L01_SPI_TIMEOUT ); 
	
	NRF24L01_CSN_HIGH();
}

void NRF24L01_ReadRegisterMulti(uint8_t reg, uint8_t* data, uint8_t length) 
{
	uint8_t txBuffer[ length + 1 ];
	uint8_t rxBuffer[ length + 1 ];

	txBuffer[0] = NRF24L01_CMD_R_REGISTER | reg;									
	for( uint8_t ind = 1 ; ind <= length ; ind++ ){					// (APAGAR) melhorar otimizacao, talvez de bug por nao inicializar
		txBuffer[ind] = NRF24L01_CMD_NOP;
	}
		
	NRF24L01_CSN_LOW();
	
	HAL_SPI_TransmitReceive( NRF24L01_Struct.hspi, txBuffer, rxBuffer, (length+1), NRF24L01_SPI_TIMEOUT );
	
	NRF24L01_CSN_HIGH();

	for( uint8_t ind = 0 ; ind < length ; ind++ ){
		data[ind] = rxBuffer[ ind + 1 ]; 
	}
}

void NRF24L01_WriteRegisterMulti(uint8_t reg, uint8_t *data, uint8_t length) // REVER
{
	uint8_t txBuffer[ length + 1 ];
	
	txBuffer[0] = NRF24L01_CMD_W_REGISTER | reg;
	for( uint8_t ind = 0 ; ind < length ; ind++ ){
		txBuffer[ ind + 1 ] = data[ind];
	}
	
	NRF24L01_CSN_LOW();
	
	HAL_SPI_Transmit( NRF24L01_Struct.hspi, txBuffer, (length+1), NRF24L01_SPI_TIMEOUT );
	
	NRF24L01_CSN_HIGH();	
}

void NRF24L01_PowerUpRx(void)
{
	/* Disable RX/TX mode */
	NRF24L01_CE_LOW();
	/* Clear RX buffer */
	NRF24L01_FlushRx();
	/* Clear interrupts */
	NRF24L01_ClearInterrupts();
	/* Setup RX mode */
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG | 1 << NRF24L01_PWR_UP | 1 << NRF24L01_PRIM_RX );
	/* Start listening */
	NRF24L01_CE_HIGH();
}

NRF24L01_Transmit_Status_t NRF24L01_Transmit(const void *data)
{
	const uint8_t* aux;
	aux = data;
	
	uint8_t length = NRF24L01_Struct.PayloadSize;

	/* Chip enable put to low, disable it */
	NRF24L01_CE_LOW();
		
	/* Clear TX FIFO from NRF24L01+ */
	NRF24L01_FlushTx();	
	
	uint8_t txBuffer[length+1];
	
	/* Send write payload command */
	txBuffer[0] = NRF24L01_CMD_W_TX_PAYLOAD;
	/* Fill payload with data*/
	for( int ind = 0 ; ind < length ; ind++ ){				// REVER se precisa iniciar
		txBuffer[ind+1] = aux[ind];
	}
	
	/* Go to power up tx mode */
	NRF24L01_PowerUpTx();
	
	/* Settling time = 150us */
	HAL_Delay(1);
	
	
	/* Send payload to nRF24L01+ */
	NRF24L01_CSN_LOW();
	
	/* Fill payload with data*/
	HAL_SPI_Transmit( NRF24L01_Struct.hspi, txBuffer, (length+1), NRF24L01_SPI_TIMEOUT );
	
	/* Disable SPI */
	NRF24L01_CSN_HIGH();
		
	/* Send data! */
	NRF24L01_CE_HIGH();
	HAL_Delay(1);
	NRF24L01_CE_LOW();
	
	/* From J. Coliz
	
	At this point we could return from a non-blocking write, an then call the rest after an interrupt.
	Instead, we are going to block here until we get TX_DS(transmission completed and ack'd) or MAX_RT
	(maximum retries, transmission failed). Also, we'll timeout in case the radio is flaky and we get
	neither.
	In the end, the send should be blocking. It comes back in 60ms worst case.
	
	*/
		
	NRF24L01_Transmit_Status_t status = NRF24L01_Transmit_Status_Lost;
	uint32_t sent_at = HAL_GetTick();
	const uint32_t timeout = NRF24L01_TX_TIMEOUT;
	
	do{
		status =  NRF24L01_GetTransmissionStatus();
		
	}while( (HAL_GetTick() - sent_at < timeout) && (status != NRF24L01_Transmit_Status_Ok)  );
	
	NRF24L01_PowerDown();
	
	NRF24L01_FlushTx();
	
	
	
	
	return status;
}

void NRF24L01_GetData(uint8_t* data)																										
{
	/* Pull down chip select */
	NRF24L01_CSN_LOW();
	
	/* Send read payload command*/
	uint8_t aux = NRF24L01_CMD_R_RX_PAYLOAD;
	HAL_SPI_Transmit( NRF24L01_Struct.hspi, &aux, 1, NRF24L01_SPI_TIMEOUT );
	
	/* Read payload */
	HAL_SPI_TransmitReceive( NRF24L01_Struct.hspi, data, data, NRF24L01_Struct.PayloadSize, NRF24L01_SPI_TIMEOUT );
	
	/* Pull up chip select */
	NRF24L01_CSN_HIGH();
	
	/* Reset status register, clear RX_DR interrupt flag */
	NRF24L01_WriteRegister(NRF24L01_REG_STATUS, (1 << NRF24L01_RX_DR));
}

uint8_t NRF24L01_GetStatus(void)
{
	uint8_t status;
	
	NRF24L01_CSN_LOW();
	
	/* First received byte is always status register */
	uint8_t aux  = NRF24L01_CMD_NOP;
	HAL_SPI_TransmitReceive( NRF24L01_Struct.hspi, &aux, &status, 1, NRF24L01_SPI_TIMEOUT );
	
	/* Pull up chip select */
	NRF24L01_CSN_HIGH();
	
	return status;
}
