==> lukaszpatulski/embedded/stm32_receiver_nrf/NRF24L01/nrf24L01.cpp <==
#include "nrf24L01.h"
#include "stm32f10x_spi.h"

uint8_t NRF24L01_base::NRF24L01_Init(uint8_t channel, uint8_t payload_size) {

	//Initialize CE and CSN pins
	NRF24L01_InitPins();
	//Initialize SPI
	SPI_Init();
	
	//Max payload is 32bytes
	if (payload_size > 32) {
		payload_size = 32;
	}
	
	NRF24L01_Struct.Channel = channel;
	NRF24L01_Struct.PayloadSize = payload_size;
	NRF24L01_Struct.OutPwr = NRF24L01_OutputPower_0dBm;
	NRF24L01_Struct.DataRate = NRF24L01_DataRate_2M;
	
	//Reset nRF24L01+ to power on registers values
	NRF24L01_SoftwareReset();
	
	//Channel select
	NRF24L01_SetChannel(NRF24L01_Struct.Channel);
	
	//Set pipeline to max possible 32 bytes
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P0, NRF24L01_Struct.PayloadSize); // Auto-ACK pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P1, NRF24L01_Struct.PayloadSize); // Data payload pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P2, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P3, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P4, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P5, NRF24L01_Struct.PayloadSize);
	
	//Set RF settings (2mbps, output power)
	NRF24L01_SetRF(NRF24L01_Struct.DataRate, NRF24L01_Struct.OutPwr);
	
	//Config register - enable interrupt caused only by NRF24L01_MASK_RX_DR (RX data ready)
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG);
	
	//Enable auto-acknowledgment for all pipes
	NRF24L01_WriteRegister(NRF24L01_REG_EN_AA, 0x3F);
	
	//Enable RX addresses
	NRF24L01_WriteRegister(NRF24L01_REG_EN_RXADDR, 0x3F);

	//Auto retransmit delay: 1000 (4x250) us and Up to 15 retransmit trials
	NRF24L01_WriteRegister(NRF24L01_REG_SETUP_RETR, 0x4F);
	
	//Dynamic length configurations: No dynamic length
	NRF24L01_WriteRegister(NRF24L01_REG_DYNPD, (0 << NRF24L01_DPL_P0) | (0 << NRF24L01_DPL_P1) | (0 << NRF24L01_DPL_P2) | (0 << NRF24L01_DPL_P3) | (0 << NRF24L01_DPL_P4) | (0 << NRF24L01_DPL_P5));
	
	//Clear FIFOs
	NRF24L01_FLUSH_TX;
	NRF24L01_FLUSH_RX;
	
	//Go to RX mode
	NRF24L01_PowerUpRx();
	
	return 1;
}

uint8_t NRF24L01_base::NRF24L01_ReadRegister(uint8_t reg) {
	uint8_t value;
	NRF24L01_CSN_Low();
	SPI_Send(NRF24L01_READ_REGISTER_MASK(reg));
	value = SPI_Send(NRF24L01_NOP_MASK);
	NRF24L01_CSN_High();
	
	return value;
}

void NRF24L01_base::NRF24L01_ReadRegisterMulti(uint8_t reg, uint8_t* data, uint8_t count) {
	NRF24L01_CSN_Low();
	SPI_Send(NRF24L01_READ_REGISTER_MASK(reg));
	SPI_ReadMulti(data, NRF24L01_NOP_MASK, count);
	NRF24L01_CSN_High();
}

void NRF24L01_base::NRF24L01_WriteRegister(uint8_t reg, uint8_t value) {
	NRF24L01_CSN_Low();
	SPI_Send(NRF24L01_WRITE_REGISTER_MASK(reg));
	SPI_Send(value);
	NRF24L01_CSN_High();
}

void NRF24L01_base::NRF24L01_WriteRegisterMulti(uint8_t reg, uint8_t *data, uint8_t count) {
	NRF24L01_CSN_Low();
	SPI_Send(NRF24L01_WRITE_REGISTER_MASK(reg));
	SPI_WriteMulti(data, count);
	NRF24L01_CSN_High();
}

void NRF24L01_base::NRF24L01_PowerUpRx(void) {
	NRF24L01_FLUSH_RX;
	
	NRF24L01_CLEAR_INTERRUPTS;
	
	NRF24L01_CE_Low();

	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG | 1 << NRF24L01_PWR_UP | 1 << NRF24L01_PRIM_RX);
	
	NRF24L01_CE_High();
}

void NRF24L01_base::NRF24L01_Transmit(uint8_t *data) {
	uint8_t count = NRF24L01_Struct.PayloadSize;

	//Chip enable put to low, disable it
	NRF24L01_CE_Low();
	
	//Go to power up tx mode
	NRF24L01_PowerUpTx();
	
	//Clear TX FIFO from NRF24L01+
	NRF24L01_FLUSH_TX;
	
	//Send payload to nRF24L01+
	NRF24L01_CSN_Low();
	//Send write payload command
	SPI_Send(NRF24L01_W_TX_PAYLOAD_MASK);
	//Fill payload with data
	SPI_WriteMulti(data, count);
	NRF24L01_CSN_High();
	
	//Delay(1000);
	//Send data!
	NRF24L01_CE_High();
}

void NRF24L01_base::NRF24L01_GetData(uint8_t* data) {
	//Pull down chip select
	NRF24L01_CSN_Low();
	//Send read payload command
	SPI_Send(NRF24L01_R_RX_PAYLOAD_MASK);
	//Read payload
	SPI_SendMulti(data, data, NRF24L01_Struct.PayloadSize);
	//Pull up chip select
	NRF24L01_CSN_High();
	
	//Reset status register, clear RX_DR interrupt flag
	NRF24L01_WriteRegister(NRF24L01_REG_STATUS, (1 << NRF24L01_RX_DR));
}

uint8_t NRF24L01_base::NRF24L01_GetStatus(void) {
	uint8_t status;
	
	NRF24L01_CSN_Low();
	//First received byte is always status register
	// Send no operation 
	status = SPI_Send(NRF24L01_NOP_MASK);
	//Pull up chip select
	NRF24L01_CSN_High();
	
	return status;
}

void NRF24L01_manager::NRF24L01_CE_Low(void) {

	GPIO_ResetBits(GPIOB, GPIO_Pin_2);
}

void NRF24L01_manager::NRF24L01_CE_High(void) {
	
	GPIO_SetBits(GPIOB, GPIO_Pin_2);
}

void NRF24L01_manager::NRF24L01_CSN_Low(void) {
	
	GPIO_ResetBits(GPIOB, GPIO_Pin_5);
}

void NRF24L01_manager::NRF24L01_CSN_High(void) {
	
	GPIO_SetBits(GPIOB, GPIO_Pin_5);
}
